Add LR+Explanations to Part 1

--- a/Part-01.ipynb
+++ b/Part-01.ipynb
@@ -16,7 +16,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import spacy\n",
+    "\n",
     "from sklearn.datasets import fetch_20newsgroups  # import packages which help us download dataset and load intp python\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
     "import numpy as np  # numpy package is for fast numerical computation in Python"
    ]
   },
@@ -144,14 +148,11 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(11314, 130107)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of Term Frequency Matrix: (11314, 130107)\n"
+     ]
     }
    ],
    "source": [
@@ -159,7 +160,7 @@
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "count_vect = CountVectorizer()\n",
     "X_train_counts = count_vect.fit_transform(twenty_train.data)\n",
-    "X_train_counts.shape"
+    "print(f'Shape of Term Frequency Matrix: {X_train_counts.shape}')"
    ]
   },
   {
@@ -168,21 +169,35 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(11314, 130107)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of TFIDF Matrix: (11314, 130107)\n"
+     ]
     }
    ],
    "source": [
     "from sklearn.feature_extraction.text import TfidfTransformer\n",
     "tfidf_transformer = TfidfTransformer()\n",
     "X_train_tfidf = tfidf_transformer.fit_transform(X_train_counts)\n",
-    "X_train_tfidf.shape"
+    "print(f'Shape of TFIDF Matrix: {X_train_tfidf.shape}') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**On f-strings:** \n",
+    "You might have noticed the use of ```f' something goes here: '``` string syntax in the print statement above. They are fast-formatted-strings introduced in Python**3.6** and considerably more Pythonic than the earlier ```.format()``` syntax. \n",
+    "\n",
+    "If you have never used formatter strings from Python3.6, check [f-strings on cito's blog](https://cito.github.io/blog/f-strings/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's try **Naive Bayes** - a popular family of machine learning approches. We try Multinomial Naive Bayes here:"
    ]
   },
   {
@@ -204,11 +219,8 @@
    "outputs": [],
    "source": [
     "# Building a pipeline: We can write less code and do all of the above, by building a pipeline as follows:\n",
-    "# The names ‘vect’ , ‘tfidf’ and ‘clf’ are arbitrary but will be used later.\n",
-    "# We will be using the 'text_clf' going forward.\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "text_clf = Pipeline([('vect', CountVectorizer()), ('tfidf', TfidfTransformer()), ('clf', MultinomialNB())])\n",
-    "text_clf = text_clf.fit(twenty_train.data, twenty_train.target)"
+    "text_nb_clf = Pipeline([('vect', CountVectorizer()), ('tfidf', TfidfTransformer()), ('clf', MultinomialNB())])\n",
+    "text_nb_clf = text_nb_clf.fit(twenty_train.data, twenty_train.target)"
    ]
   },
   {
@@ -217,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predicted = text_clf.predict(twenty_test.data)\n",
+    "predicted = text_nb_clf.predict(twenty_test.data)\n",
     "naivebayes_clf_accuracy = np.mean(predicted == twenty_test.target) * 100."
    ]
   },
@@ -242,10 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**On f-strings:** \n",
-    "You might have noticed the use of ```f' something goes here: '``` string syntax in the print statement above. They are fast-formatted-strings introduced in Python**3.6** and considerably more Pythonic than the earlier ```.format()``` syntax. \n",
-    "\n",
-    "If you have never used formatter strings from Python3.6, check [f-strings on cito's blog](https://cito.github.io/blog/f-strings/)"
+    "Let's try **Logistic Regression**, which trains faster and is easier to interepret and understand. "
    ]
   },
   {
@@ -266,7 +275,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 9.88 s\n"
+      "Wall time: 10 s\n"
      ]
     }
    ],
@@ -278,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -293,6 +302,46 @@
     "lr_predicted = text_lr_clf.predict(twenty_test.data)\n",
     "lr_clf_accuracy = np.mean(lr_predicted == twenty_test.target) * 100.\n",
     "print(f'Test Accuracy is {lr_clf_accuracy}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We used LR default parameters here. We can later optimize these using GridSearch or RandomSearch to improve accuracy even more. \n",
+    "\n",
+    "If you’re going to remember only one thing from this article, remember to use a linear model for sparse high-dimensional data such as text as bag-of-words or TF-IDF"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tricks of Trade\n",
+    "#### Removing Stop Words\n",
+    "Removing stop words (the, then etc) from the data. \n",
+    "\n",
+    "You should do this only when stop words are not useful for the underlying problem. In most of the text classification problems, this is indeed not useful. Let’s see if removing stop words increases the accuracy. \n",
+    "\n",
+    "Let's update the code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = spacy.load('en')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If there is an error above, try:\n",
+    "- Windows:```python -m spacy download en``` as **Administrator**\n",
+    "- Linux:```sudo python -m spacy download en ```"
    ]
   },
   {
