Add Stop Word Removal

--- a/Part-01.ipynb
+++ b/Part-01.ipynb
@@ -275,7 +275,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 10 s\n"
+      "Wall time: 10.7 s\n"
      ]
     }
    ],
@@ -319,7 +319,7 @@
    "source": [
     "### Tricks of Trade\n",
     "#### Removing Stop Words\n",
-    "Removing stop words (the, then etc) from the data. \n",
+    "They are usually words like *the*, *then*, *a*, *of* etc. Stop words are words which occur too often across documents and don't help disntinguishing one document from another. Removing them from the data is usually the first trick to try. \n",
     "\n",
     "You should do this only when stop words are not useful for the underlying problem. In most of the text classification problems, this is indeed not useful. Let’s see if removing stop words increases the accuracy. \n",
     "\n",
@@ -342,6 +342,604 @@
     "If there is an error above, try:\n",
     "- Windows:```python -m spacy download en``` as **Administrator**\n",
     "- Linux:```sudo python -m spacy download en ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exploring spaCy\n",
+    "Let's look at an inside look at words which spaCy considers as stop words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a',\n",
+       " 'about',\n",
+       " 'above',\n",
+       " 'across',\n",
+       " 'after',\n",
+       " 'afterwards',\n",
+       " 'again',\n",
+       " 'against',\n",
+       " 'all',\n",
+       " 'almost',\n",
+       " 'alone',\n",
+       " 'along',\n",
+       " 'already',\n",
+       " 'also',\n",
+       " 'although',\n",
+       " 'always',\n",
+       " 'am',\n",
+       " 'among',\n",
+       " 'amongst',\n",
+       " 'amount',\n",
+       " 'an',\n",
+       " 'and',\n",
+       " 'another',\n",
+       " 'any',\n",
+       " 'anyhow',\n",
+       " 'anyone',\n",
+       " 'anything',\n",
+       " 'anyway',\n",
+       " 'anywhere',\n",
+       " 'are',\n",
+       " 'around',\n",
+       " 'as',\n",
+       " 'at',\n",
+       " 'back',\n",
+       " 'be',\n",
+       " 'became',\n",
+       " 'because',\n",
+       " 'become',\n",
+       " 'becomes',\n",
+       " 'becoming',\n",
+       " 'been',\n",
+       " 'before',\n",
+       " 'beforehand',\n",
+       " 'behind',\n",
+       " 'being',\n",
+       " 'below',\n",
+       " 'beside',\n",
+       " 'besides',\n",
+       " 'between',\n",
+       " 'beyond',\n",
+       " 'both',\n",
+       " 'bottom',\n",
+       " 'but',\n",
+       " 'by',\n",
+       " 'ca',\n",
+       " 'call',\n",
+       " 'can',\n",
+       " 'cannot',\n",
+       " 'could',\n",
+       " 'did',\n",
+       " 'do',\n",
+       " 'does',\n",
+       " 'doing',\n",
+       " 'done',\n",
+       " 'down',\n",
+       " 'due',\n",
+       " 'during',\n",
+       " 'each',\n",
+       " 'eight',\n",
+       " 'either',\n",
+       " 'eleven',\n",
+       " 'else',\n",
+       " 'elsewhere',\n",
+       " 'empty',\n",
+       " 'enough',\n",
+       " 'even',\n",
+       " 'ever',\n",
+       " 'every',\n",
+       " 'everyone',\n",
+       " 'everything',\n",
+       " 'everywhere',\n",
+       " 'except',\n",
+       " 'few',\n",
+       " 'fifteen',\n",
+       " 'fifty',\n",
+       " 'first',\n",
+       " 'five',\n",
+       " 'for',\n",
+       " 'former',\n",
+       " 'formerly',\n",
+       " 'forty',\n",
+       " 'four',\n",
+       " 'from',\n",
+       " 'front',\n",
+       " 'full',\n",
+       " 'further',\n",
+       " 'get',\n",
+       " 'give',\n",
+       " 'go',\n",
+       " 'had',\n",
+       " 'has',\n",
+       " 'have',\n",
+       " 'he',\n",
+       " 'hence',\n",
+       " 'her',\n",
+       " 'here',\n",
+       " 'hereafter',\n",
+       " 'hereby',\n",
+       " 'herein',\n",
+       " 'hereupon',\n",
+       " 'hers',\n",
+       " 'herself',\n",
+       " 'him',\n",
+       " 'himself',\n",
+       " 'his',\n",
+       " 'how',\n",
+       " 'however',\n",
+       " 'hundred',\n",
+       " 'i',\n",
+       " 'if',\n",
+       " 'in',\n",
+       " 'indeed',\n",
+       " 'into',\n",
+       " 'is',\n",
+       " 'it',\n",
+       " 'its',\n",
+       " 'itself',\n",
+       " 'just',\n",
+       " 'keep',\n",
+       " 'last',\n",
+       " 'latter',\n",
+       " 'latterly',\n",
+       " 'least',\n",
+       " 'less',\n",
+       " 'made',\n",
+       " 'make',\n",
+       " 'many',\n",
+       " 'may',\n",
+       " 'me',\n",
+       " 'meanwhile',\n",
+       " 'might',\n",
+       " 'mine',\n",
+       " 'more',\n",
+       " 'moreover',\n",
+       " 'most',\n",
+       " 'mostly',\n",
+       " 'move',\n",
+       " 'much',\n",
+       " 'must',\n",
+       " 'my',\n",
+       " 'myself',\n",
+       " 'name',\n",
+       " 'namely',\n",
+       " 'neither',\n",
+       " 'never',\n",
+       " 'nevertheless',\n",
+       " 'next',\n",
+       " 'nine',\n",
+       " 'no',\n",
+       " 'nobody',\n",
+       " 'none',\n",
+       " 'noone',\n",
+       " 'nor',\n",
+       " 'not',\n",
+       " 'nothing',\n",
+       " 'now',\n",
+       " 'nowhere',\n",
+       " 'of',\n",
+       " 'off',\n",
+       " 'often',\n",
+       " 'on',\n",
+       " 'once',\n",
+       " 'one',\n",
+       " 'only',\n",
+       " 'onto',\n",
+       " 'or',\n",
+       " 'other',\n",
+       " 'others',\n",
+       " 'otherwise',\n",
+       " 'our',\n",
+       " 'ours',\n",
+       " 'ourselves',\n",
+       " 'out',\n",
+       " 'over',\n",
+       " 'own',\n",
+       " 'part',\n",
+       " 'per',\n",
+       " 'perhaps',\n",
+       " 'please',\n",
+       " 'put',\n",
+       " 'quite',\n",
+       " 'rather',\n",
+       " 're',\n",
+       " 'really',\n",
+       " 'regarding',\n",
+       " 'same',\n",
+       " 'say',\n",
+       " 'see',\n",
+       " 'seem',\n",
+       " 'seemed',\n",
+       " 'seeming',\n",
+       " 'seems',\n",
+       " 'serious',\n",
+       " 'several',\n",
+       " 'she',\n",
+       " 'should',\n",
+       " 'show',\n",
+       " 'side',\n",
+       " 'since',\n",
+       " 'six',\n",
+       " 'sixty',\n",
+       " 'so',\n",
+       " 'some',\n",
+       " 'somehow',\n",
+       " 'someone',\n",
+       " 'something',\n",
+       " 'sometime',\n",
+       " 'sometimes',\n",
+       " 'somewhere',\n",
+       " 'still',\n",
+       " 'such',\n",
+       " 'take',\n",
+       " 'ten',\n",
+       " 'than',\n",
+       " 'that',\n",
+       " 'the',\n",
+       " 'their',\n",
+       " 'them',\n",
+       " 'themselves',\n",
+       " 'then',\n",
+       " 'thence',\n",
+       " 'there',\n",
+       " 'thereafter',\n",
+       " 'thereby',\n",
+       " 'therefore',\n",
+       " 'therein',\n",
+       " 'thereupon',\n",
+       " 'these',\n",
+       " 'they',\n",
+       " 'third',\n",
+       " 'this',\n",
+       " 'those',\n",
+       " 'though',\n",
+       " 'three',\n",
+       " 'through',\n",
+       " 'throughout',\n",
+       " 'thru',\n",
+       " 'thus',\n",
+       " 'to',\n",
+       " 'together',\n",
+       " 'too',\n",
+       " 'top',\n",
+       " 'toward',\n",
+       " 'towards',\n",
+       " 'twelve',\n",
+       " 'twenty',\n",
+       " 'two',\n",
+       " 'under',\n",
+       " 'unless',\n",
+       " 'until',\n",
+       " 'up',\n",
+       " 'upon',\n",
+       " 'us',\n",
+       " 'used',\n",
+       " 'using',\n",
+       " 'various',\n",
+       " 'very',\n",
+       " 'via',\n",
+       " 'was',\n",
+       " 'we',\n",
+       " 'well',\n",
+       " 'were',\n",
+       " 'what',\n",
+       " 'whatever',\n",
+       " 'when',\n",
+       " 'whence',\n",
+       " 'whenever',\n",
+       " 'where',\n",
+       " 'whereafter',\n",
+       " 'whereas',\n",
+       " 'whereby',\n",
+       " 'wherein',\n",
+       " 'whereupon',\n",
+       " 'wherever',\n",
+       " 'whether',\n",
+       " 'which',\n",
+       " 'while',\n",
+       " 'whither',\n",
+       " 'who',\n",
+       " 'whoever',\n",
+       " 'whole',\n",
+       " 'whom',\n",
+       " 'whose',\n",
+       " 'why',\n",
+       " 'will',\n",
+       " 'with',\n",
+       " 'within',\n",
+       " 'without',\n",
+       " 'would',\n",
+       " 'yet',\n",
+       " 'you',\n",
+       " 'your',\n",
+       " 'yours',\n",
+       " 'yourself',\n",
+       " 'yourselves'}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from spacy.lang.en.stop_words import STOP_WORDS\n",
+    "STOP_WORDS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'There are 305 stopwords in spaCy'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'There are {len(STOP_WORDS)} stopwords in spaCy'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'After adding your own stop words, spaCy will use 306 stopwords'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# You can add your own corpora specific STOPWORDS using the .add syntax\n",
+    "STOP_WORDS.add(\"your_additional_stop_word_here\")\n",
+    "f'After adding your own stop words, spaCy will use {len(STOP_WORDS)} stopwords'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am learning the most important ideas Natural Language Processing ideas using Python\n"
+     ]
+    }
+   ],
+   "source": [
+    "doc = nlp(\"I am learning the most important ideas Natural Language Processing ideas using Python\")\n",
+    "print(doc)  # doc is a spaCy object which stores the entire document string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**About spaCy objects**\n",
+    "- spaCy does some common NLP tasks such as tokenization, stop word analysis and lemmatization the momnent the object is created\n",
+    "- the spaCy tokenization and syntactic parsing is faster than NLTK and much more accurate\n",
+    "- You can learn more at [NLP with spaCy tutorial](https://dataflume.wordpress.com/2017/03/17/intro-nlp-python-spacy/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "spaCy has already tokenized the document and you can iterate over it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I\n",
+      "am\n",
+      "learning\n",
+      "the\n",
+      "most\n",
+      "important\n",
+      "ideas\n",
+      "Natural\n",
+      "Language\n",
+      "Processing\n",
+      "ideas\n",
+      "using\n",
+      "Python\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in doc:\n",
+    "    print(token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[I, learning, important, ideas, Natural, Language, Processing, ideas, Python]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simplified_doc = [token for token in doc if not token.is_punct | token.is_stop]\n",
+    "simplified_doc\n",
+    "# please note that .orth_ attribute returns the unicode string representation of the token"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also check what other things we know about these tags in the simplified_doc:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token:I\tLemmatized:-PRON-\tPart-of-Speech-Tag:PRON\n",
+      "Token:learning\tLemmatized:learn\tPart-of-Speech-Tag:VERB\n",
+      "Token:important\tLemmatized:important\tPart-of-Speech-Tag:ADJ\n",
+      "Token:ideas\tLemmatized:idea\tPart-of-Speech-Tag:NOUN\n",
+      "Token:Natural\tLemmatized:natural\tPart-of-Speech-Tag:PROPN\n",
+      "Token:Language\tLemmatized:language\tPart-of-Speech-Tag:PROPN\n",
+      "Token:Processing\tLemmatized:processing\tPart-of-Speech-Tag:PROPN\n",
+      "Token:ideas\tLemmatized:idea\tPart-of-Speech-Tag:NOUN\n",
+      "Token:Python\tLemmatized:python\tPart-of-Speech-Tag:NOUN\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in simplified_doc:\n",
+    "    print(f'Token:{token.orth_}\\tLemmatized:{token.lemma_}\\tPart-of-Speech-Tag:{token.pos_}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Integrating back with our classifier pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "??CountVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from spacy.lang.en import English\n",
+    "tokenizer = English().Defaults.create_tokenizer(nlp)\n",
+    "def spacy_tokenizer(document):\n",
+    "    return [token.orth_ for token in tokenizer(document)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 10.1 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "text_lr_clf = Pipeline([('vect', CountVectorizer()), ('tfidf', TfidfTransformer()), ('clf',LR())])\n",
+    "text_lr_clf = text_lr_clf.fit(twenty_train.data, twenty_train.target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy is 82.79341476367499\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "82.79341476367499"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def calc_print_accuracy(text_clf, test):\n",
+    "    predictions = text_clf.predict(test.data)\n",
+    "    clf_accuracy = np.mean(predictions == test.target) * 100.\n",
+    "    print(f'Test Accuracy is {clf_accuracy}')\n",
+    "    return clf_accuracy\n",
+    "\n",
+    "calc_print_accuracy(text_lr_clf, twenty_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy is 78.18640467339351\n",
+      "Wall time: 3min 19s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "text_lr_clf = Pipeline([('vect', CountVectorizer(tokenizer=spacy_tokenizer, stop_words=list(STOP_WORDS))), ('tfidf', TfidfTransformer()), ('clf',LR())])\n",
+    "text_lr_clf = text_lr_clf.fit(twenty_train.data, twenty_train.target)\n",
+    "calc_print_accuracy(text_lr_clf, twenty_test)"
    ]
   },
   {
